--- a/web_dasar/index.html
+++ b/web_dasar/index.html
@@ -21,7 +21,7 @@
         </nav>
     </header>
     <main>
-        <div>
+        <div id="content">
             <article class="card">
                 <h2 id="sejarah">Sejarah</h2>
                 <img src="assets/image/history.jpg" alt="sejarah" class="featured-image">
@@ -53,7 +53,9 @@
                 <p>Kota Bandung dialiri dua sungai utama, yaitu Sungai Cikapundung dan Sungai Citarum beserta anak-anak
                     sungainya yang pada umumnya mengalir ke arah selatan dan bertemu di Sungai Citarum. Dengan kondisi
                     yangdemikian, Bandung selatan sangat rentan terhadap masalah banjir terutama pada musim hujan.</p>
+            </article>
 
+            <article class="card">
                 <h2 id="wisata">Wisata</h2>
                 <p>Sejak dibukanya Jalan Tol Cipularang, kota Bandung telah menjadi tujuan utama dalam menikmati liburan
                     akhir pekan terutama dari masyarakat yang berasal dari Jakarta sekitarnya. Selain menjadi kota
@@ -61,9 +63,7 @@
                     belanja, kota Bandung juga dikenal dengan sejumlah besar bangunan lama berarsitektur peninggalan
                     Belanda.
                 </p>
-            </article>
 
-            <article class="card">
                 <h3>Farm House Lembang</h3>
                 <img src="assets/image/farm-house.jpg" alt="farm house" class="featured-image">
                 <p>Berada di jalur utama Bandung-Lembang, Farm House menjadi objek wisata yang tidak pernah sepi
